--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,10 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.2
+  bloc: ^8.1.2
+  flutter_bloc: ^8.1.3
+  dio: ^5.4.0
+  equatable: ^2.0.5
 
 
 dev_dependencies:
